test/runnable/lambda_packing.nt
module lambda_packing;

void main() {
    test_struct;
    test_tuple;
    test_sumtype;
}

void test_struct() {
    auto lambda = () => 5;
    alias L = typeof(lambda);
    struct S {
        L l;
    }
    S s = S(lambda);
    s.l();
}

void test_tuple() {
    auto lambda = () => 5;
    mut auto tuple = (lambda, 1);
    tuple = (lambda, 1);
    tuple[0]();
}

void test_sumtype() {
    auto lambda = () => 5;
    mut (typeof(lambda) | int) st = 5;
    st = lambda;
    st.case {
        typeof(lambda) l: l();
        int i: {}
    }
}
