test/fail_compilation/lambda_escape_struct_return.nt
module lambda_escape_struct_return;

auto test() {
    auto lambda = a => 2;
    struct S {
        typeof(lambda) l;
    }
    auto s = S(lambda);
    // this will fail.
    return s;
}

void main() {
    test().l();
}
